Fixed random background gap at the bottom

--- a/app/styles/Field/CardField.css
+++ b/app/styles/Field/CardField.css
@@ -7,8 +7,8 @@
 
 :local(.dimensions) {
 	width: 100%;
-	max-height: 900px;
-	overflow-y: auto;
+	/* max-height: 900px; */
+	/* overflow-y: auto; */
 }
 
 :local(.borderBottom) {
